@@ -2090,6 +2090,7 @@ static void handle_result(
     char *qname;
     char *disk = NULL;
     long long size_;
+    int pid;
 
     hostp = (am_host_t *)datap;
     hostp->status = HOST_READY;
@@ -2380,7 +2381,9 @@ next_line:
     getsize(hostp);
     /* try to clean up any defunct processes, since Amanda doesn't wait() for
        them explicitly */
-    while(waitpid(-1, NULL, WNOHANG)> 0);
+    while ((pid = waitpid(-1, NULL, WNOHANG)) > 0) {
+	g_debug("reap: %d", pid);
+    }
     if (errbuf)
 	goto error_return;
     return;
@@ -2463,7 +2466,9 @@ next_line:
     amfree(errbuf);
     /* try to clean up any defunct processes, since Amanda doesn't wait() for
        them explicitly */
-    while(waitpid(-1, NULL, WNOHANG)> 0);
+    while ((pid = waitpid(-1, NULL, WNOHANG)) > 0) {
+	g_debug("reap: %d", pid);
+    }
 }
 
 
